Added Popup-Windows for kicking and banning, change the database layout, added the server-config-editor and editing of roles, bans, kicks and whitelists
