# Domain/ServerConfig/DataType.cs
@@ -1,12 +1,0 @@
-namespace Domain.ServerConfig;
-
-public enum DataType
-{
-    Number = 0,
-    Text = 1,
-    TextLong = 2,
-    TextShort = 3,
-    Decimal = 4,
-    Boolean = 5,
-    Array = 6
-}
